search : indexes result

--- a/templates/default/search.html.twig
+++ b/templates/default/search.html.twig
@@ -109,7 +109,7 @@
 			 	</div>
 		 	</div>
 		 		<div class="row">
-					{% for e in establishments %}
+					{% for e in establishments.results %}
 						<div class="col-md-1">
 							<table style="height: 100%; width: 100%;">
 								<tr>
