--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -17,6 +17,13 @@
                 <span>INSCRIPTION</span>
               </h2>
               <div style="margin: 0 auto; width: 75px;" class="divider-spe mt-3"></div>
+              <div class="mt-3">
+              	{% for message in app.flashes('error') %}
+				    <div class="alert alert-notice red">
+				        {{ message }}
+				    </div>
+				{% endfor %}
+              </div>
             </div>
           </div>
 
@@ -111,6 +118,9 @@
 							</td>
 						</tr>
 					</table>
+
+
+
 					<div class="mt-4">
 						<input type="checkbox" class="iRead">
 						<span class="pl-3">J'ai lu et j'accepte les conditions générales d'utilisation</span>
@@ -119,6 +129,9 @@
 						<input type="checkbox" class="iAccept">
 						<span class="pl-3">J'accepte de recevoir les newsletters et offres commerciales de opasenior et ses partenaires</span>
 					</div>
+
+					<div class="g-recaptcha mt-3" data-sitekey="6LenyYIUAAAAAPvjuqOaamVszAa4_1zQiF6Ir5wb"></div>
+
 					<div class="mt-3 red" id="messageChecked" style="display: none;">
 						<span>* Veuillez cocher les deux cases ci-dessus</span>
 					</div>
@@ -145,6 +158,7 @@
 
 	{{ parent() }}
 
+	<script src='https://www.google.com/recaptcha/api.js'></script>
 	<script type="text/javascript">
 		$(document).ready(function() {
 
