d&d, unbug jquery, unbug JSON migration

--- a/templates/establishement/index.html.twig
+++ b/templates/establishement/index.html.twig
@@ -80,9 +80,9 @@
                                         <th>Nouvelle</th>
                                         <td>Action</td>
                                     </thead>
-                                    <tbody>
+                                    <tbody class="draganddrop">
                                         {% for entity in entities.results %}
-                                            <tr>
+                                            <tr >
                                                 <td>
                                                     <span>{{ entity.id }}</span>
                                                 </td>
