--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -10,6 +10,8 @@
     <link rel="stylesheet" type="text/css" href="{{ asset('css/light-bootstrap-dashboard.css?v=1.4.0') }}">
     <link rel="stylesheet" type="text/css" href="{{ asset('css/pe-icon-7-stroke.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ asset('css/admin-personnal.css') }}">
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js" integrity="sha256-0YPKAwZP7Mp3ALMRVB2i8GXeEndvCq3eSl/WsAl1Ryk=" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -90,8 +92,17 @@
 
 </body>
     {% block javascripts %}
-        <script type="text/javascript" src="{{ asset('js/jquery.3.2.1.min.js') }}"></script>
-        <script type="text/javascript" src="{{ asset('js/light-bootstrap-dashboard.js?v=1.4.0') }}"></script>
-        <script type="text/javascript" src="{{ asset('js/filter-form.js')}}"></script>
+        <script type="text/javascript">
+            $(
+                function(){
+                    $('.draganddrop').sortable({
+                        stop: function(event, ui){
+                            console.log(ui.item.index());
+                        }
+                    });
+                    $('.draganddrop').disableSelection();
+                }
+            )
+        </script>
     {% endblock %}
 </html>
